--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,9 @@ tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
 tracing-subscriber = "0.2"
 tracing = "0.1"
 sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "uuid", "chrono"  ] }
-askama = "0.10"
+askama = { version = "0.11" }
+askama_escape = "0.10"
 serde_derive = "1"
 uuid = { version = "0.8", features = ["serde", "v4"] }
 chrono = {features = ["serde"], version = "0.4"}
+markdown = "0.3"
