--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
 tracing-subscriber = "0.2"
 tracing = "0.1"
 mongodb = { version = "2" }
+bson = { version = "*", features = ["chrono-0_4"] }
 futures = "0.3"
 chrono = { features = ["serde"], version = "0.4" }
 markdown = "0.3"
